# BWI_webscraper

./: LICENSE  README.md  app.py  pyproject.toml
lib/: bwi_scraper.py
static/css/: loginstyle.css  style.css
static/js/: login.js  script.js
templates/: index.html  login.html
