[tool.poetry]
name = "best wine importer webscraper"
version = "0.1.0"
description = ""
authors = ["Jacob <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
selenium = "^4.25.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
